--- a/Good Friends Never Starve/Good Friends Never Starve.csproj
+++ b/Good Friends Never Starve/Good Friends Never Starve.csproj
@@ -11,6 +11,8 @@
 
   <ItemGroup>
     <PackageReference Include="DevExpress.Win.Design" Version="22.2.6" />
+    <PackageReference Include="Dotenv.Net" Version="3.1.3" />
+    <PackageReference Include="DotNetEnv" Version="2.5.0" />
     <PackageReference Include="System.Data.SqlClient" Version="4.8.5" />
   </ItemGroup>
 
